--- a/main.css
+++ b/main.css
@@ -4,9 +4,11 @@
   box-sizing: border-box;
 }
 body{
+  
   height: 6000px;
 }
 a{
+
   text-decoration: none;
 }
 
@@ -18,9 +20,20 @@ justify-content: space-around ;
 position: fixed;
 width:100% ;
 background: wheat;
+top: 0;
 }
 
+.footer-list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
 
+.row{
+  display: flex;
+justify-content: space-around ;
+flex-wrap: wrap;
+}
 
 ul{
   list-style-type:none;
@@ -29,13 +42,14 @@ ul{
 .header ul{
   display: flex;
   gap: 30px;
+  
 }
 .header .list a{
   color:red
 
 }
 
-.header form{
+.header form {
   border: 2px solid #E7E6EF;
   display: flex;
 
@@ -48,3 +62,66 @@ ul{
 .header .list :hover{
   color: aquamarine;
 }
+
+/* start footerr*/
+.footer{
+  background-color:#EEEFFB ;
+  padding :50px 0 ;
+}
+
+.footer form{
+  border: 3px  #FFFFFF;
+  display: flex;
+}
+.footer form button{
+  background-color: #FB2E86;
+padding: 10px 0;
+color: white;
+}
+.footer .left-side{
+display:flex;
+flex-direction: column;
+gap:   20px;
+}
+
+
+.footer .address h4,
+.footer .address p{
+    color: #8A8FB9;
+}
+
+
+.footer .right-side{
+  width: 50%;
+  width: calc((100%-22px)/2);
+  
+}
+.footer .footer-item{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  gap:  46px;
+}
+.footer .footer-list{
+  display: flex;
+  flex-direction: column;
+  gap: 24px;;
+}
+
+.footer .right-side a{
+  color:#8A8FB9 ;
+}
+.footer .left-side{
+  
+  width: calc((100%-22px)/2);
+  
+}
+
+@media screen and (min-width:0) and (max-width:600px){
+  .footer .left-side,.footer.right-side{
+    width: 100%;
+  }
+}
+  
+
+ 
