Update text and image

--- a/main.css
+++ b/main.css
@@ -123,5 +123,31 @@ gap:   20px;
   }
 }
   
+.test{
+  background-image: url("./image/Rectangle 102.png");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  height: 55vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  flex-direction: column;
+  
+}
+.tests{
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+ .btn { 
+  background-color: #FB2E86;
+  color: white;
+  padding: 10px 5px;
+ }
 
- 
+ .tests h2 {
+  color: #151875;   
+}
