--- a/main.css
+++ b/main.css
@@ -151,3 +151,78 @@ gap:   20px;
  .tests h2 {
   color: #151875;   
 }
+
+/* card*/
+.featured {
+   
+    text-align: center;
+    padding: 50px 0;
+    font-family: sans-serif;
+}
+
+.title {
+    color: #1A0B5B;
+    font-size: 32px;
+    font-weight: 700;
+    font-family: Josefin Sans;
+    margin-bottom: 40px;
+}
+
+.card {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 30px;
+    flex-wrap: nowrap;
+}
+
+.product-card {
+    width: 230px;
+    background: #F6F7FB;
+    border-radius: 8px;
+    padding-bottom: 20px;
+    text-align: center;
+    overflow: hidden;
+
+     box-shadow: 0px 4px 20px rgba(0,0,0,0.15);
+    transition: 0.3s ease-in-out;
+}
+
+.product-card img {
+     width: 100%;
+    height: 200px;
+    object-fit: contain;
+   
+    padding: 20px;;
+}
+
+.product-card h3 {
+    color: #FB2E86;
+    margin: 10px 0 5px;
+}
+
+.code {
+    color: #8A8FB9;
+}
+
+.price {
+    color: #1A0B5B;
+    font-weight: bold;
+}
+.colors {
+    display: flex;
+    justify-content: center;
+    gap: 6px;
+    margin: 8px 0;
+}
+
+.color {
+    width: 20px;
+    height: 4px;
+    border-radius: 10px;
+    display: inline-block;
+}
+.color.pink { background: #FB2E86; }
+.color.blue { background: #2F1AC4; }
+.color.navy { background: #3F509E; }
+
