--- a/main.css
+++ b/main.css
@@ -241,3 +241,112 @@ gap:   20px;
         width: 90%;
     }
 }
+/* end card*/
+
+
+/* hero*/
+.hero{
+  background:#F2F0FF ;
+  padding: 50px 0;
+}
+
+.hero-container{
+display: flex;
+  align-items: center;
+  justify-content: space-between;
+   margin: auto;
+   width: 80%;
+  gap: 40px;
+}
+
+.small-title {
+  color: #FB2E86;
+  font-size: 14px;
+  display: block;
+  margin-bottom: 15px;
+}
+
+.left {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  width: calc((100% - 22px) / 2);
+}
+
+.left p {
+  color: #8A8FB9;
+  max-width: 420px;
+  margin-bottom: 30px;
+  font-size: 15px;
+}
+.btn {
+  background: #FB2E86;
+  color: #fff;
+  border: none;
+  padding: 12px 40px;
+  cursor: pointer;
+  border-radius: 4px;
+  font-size: 14px;
+  width: fit-content;
+}
+
+.right{
+  position: relative;
+  display: flex;
+  
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+width: calc((100% - 22px) / 2);
+}
+
+.right img {
+  width: 300px;
+  position: relative;
+  z-index: 2;
+}
+.discount {
+  position: absolute;
+  top: 10px;
+  right: 160px;
+  background: #00C1FE;
+  color: #fff;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  font-size: 14px;
+  font-weight: bold;
+   z-index: 3;
+}
+
+
+.circle {
+  position: absolute;
+  width: 300px;
+  height: 300px;
+  background: #F6E8FF;
+  border-radius: 50%;
+  top: 50%;
+  left: 55%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+}
+
+@media (max-width: 900px) {
+  .hero-container {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .left p {
+    margin: 0 auto 30px;
+  }
+
+  .right {
+    margin-top: 40px;
+  }
+}
